--- a/libft/Makefile
+++ b/libft/Makefile
@@ -15,8 +15,8 @@ SRCS = ./ft_isalnum.c ./ft_isalpha.c ./ft_isascii.c ./ft_isdigit.c \
        ./ft_memset.c ./ft_bzero.c ./ft_memcpy.c ./ft_memmove.c \
        ./ft_memchr.c ./ft_memcmp.c ./ft_calloc.c ./ft_strdup.c \
        ./ft_putchar_fd.c ./ft_putstr_fd.c ./ft_putendl_fd.c ./ft_putnbr_fd.c \
-       ./ft_atoi.c ./ft_itoa.c ./ft_listadd_back.c ./ft_listadd_front.c \
-       ./ft_lstlast.c ./ft_lstnew.c
+       ./ft_atoi.c ./ft_itoa.c ./ft_lstadd_back.c ./ft_lstadd_front.c \
+       ./ft_lstlast.c ./ft_lstnew.c ./ft_strcmp.c ./ft_strjoin3.c ./ft_realloc.c
 
 OBJS = $(SRCS:.c=.o)
 
